# Project-NUEVO

./: .gitignore
docs/manual/: MANUAL.md
firmware/: CODE_BASE_ORGANIZE.md  ISR_ARCHITECTURE_NOTES.md
firmware/arduino/: arduino.ino
firmware/arduino/src/: ISRScheduler.cpp  ISRScheduler.h  config.h  pins.h
firmware/arduino/src/drivers/: DCMotor.cpp  DCMotor.h  StepperMotor.cpp  StepperMotor.h
firmware/arduino/src/lib/: Adafruit_NeoPixel.cpp  tlvcodec.c  tlvcodec.h
firmware/arduino/src/messages/: TLV_Payloads.h  TLV_TypeDefs.h
firmware/arduino/src/modules/: DebugLog.cpp  DebugLog.h  EncoderCounter.cpp  EncoderCounter.h  LoopMonitor.cpp  LoopMonitor.h  MessageCenter.cpp  MessageCenter.h  SensorManager.cpp  SensorManager.h  StepperManager.cpp  StepperManager.h  UserIO.cpp
firmware/tests/: README.md
firmware/tests/test_dc_motor_pid/: test_dc_motor_pid.ino
firmware/tests/test_uart_loop_drain/: test_uart_loop_drain.ino
firmware/tests/test_uart_rx_10khz/: test_uart_rx_10khz.ino
nuevo_board/: README.md
nuevo_ui/backend/nuevo_bridge/: config.py  message_router.py  payloads.py  ros2_converters.py  serial_manager.py
nuevo_ui/backend/nuevo_bridge/tests/: test_message_router_compact_tlv.py
nuevo_ui/frontend/src/components/: PowerSection.tsx  SensorSection.tsx
nuevo_ui/frontend/src/lib/: wsProtocol.ts
ros2_ws/docker/: Dockerfile.robot  docker-compose.rpi.yml
ros2_ws/src/: TLV_TypeDefs.py
ros2_ws/src/sensors/: package.xml  setup.cfg
ros2_ws/src/sensors/launch/: sensors.launch.py
ros2_ws/src/sensors/sensors/: qwiic_ultrasonic_node.py
(+44 files in other folders)
